src/test/ui/const-generics/issues/issue-67185-2.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-67185-2.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error[E0277]: the trait bound `[u16; 3]: Bar` is not satisfied
  --> $DIR/issue-67185-2.rs:15:1
   |
LL | / trait Foo
LL | |
LL | |     where
LL | |         [<u8 as Baz>::Quaks; 2]: Bar,
LL | |         <u8 as Baz>::Quaks: Bar,
LL | | {
LL | | }
   | |_^ the trait `Bar` is not implemented for `[u16; 3]`
   |
   = help: the following implementations were found:
             <[[u16; 3]; 3] as Bar>
             <[u16; 4] as Bar>
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable

error[E0277]: the trait bound `[[u16; 3]; 2]: Bar` is not satisfied
  --> $DIR/issue-67185-2.rs:15:1
   |
LL | / trait Foo
LL | |
LL | |     where
LL | |         [<u8 as Baz>::Quaks; 2]: Bar,
LL | |         <u8 as Baz>::Quaks: Bar,
LL | | {
LL | | }
   | |_^ the trait `Bar` is not implemented for `[[u16; 3]; 2]`
   |
   = help: the following implementations were found:
             <[[u16; 3]; 3] as Bar>
             <[u16; 4] as Bar>
   = help: see issue #48214
   = help: add `#![feature(trivial_bounds)]` to the crate attributes to enable

error[E0277]: the trait bound `[u16; 3]: Bar` is not satisfied
  --> $DIR/issue-67185-2.rs:25:6
   |
LL | trait Foo
   |       --- required by a bound in this
...
LL |         <u8 as Baz>::Quaks: Bar,
   |                             --- required by this bound in `Foo`
...
LL | impl Foo for FooImpl {}
   |      ^^^ the trait `Bar` is not implemented for `[u16; 3]`
   |
   = help: the following implementations were found:
             <[[u16; 3]; 3] as Bar>
             <[u16; 4] as Bar>

error[E0277]: the trait bound `[[u16; 3]; 2]: Bar` is not satisfied
  --> $DIR/issue-67185-2.rs:25:6
   |
LL | trait Foo
   |       --- required by a bound in this
...
LL |         [<u8 as Baz>::Quaks; 2]: Bar,
   |                                  --- required by this bound in `Foo`
...
LL | impl Foo for FooImpl {}
   |      ^^^ the trait `Bar` is not implemented for `[[u16; 3]; 2]`
   |
   = help: the following implementations were found:
             <[[u16; 3]; 3] as Bar>
             <[u16; 4] as Bar>

error[E0277]: the trait bound `[[u16; 3]; 2]: Bar` is not satisfied
  --> $DIR/issue-67185-2.rs:29:14
   |
LL | trait Foo
   |       --- required by a bound in this
...
LL |         [<u8 as Baz>::Quaks; 2]: Bar,
   |                                  --- required by this bound in `Foo`
...
LL | fn f(_: impl Foo) {}
   |              ^^^ the trait `Bar` is not implemented for `[[u16; 3]; 2]`
   |
   = help: the following implementations were found:
             <[[u16; 3]; 3] as Bar>
             <[u16; 4] as Bar>

error[E0277]: the trait bound `[u16; 3]: Bar` is not satisfied
  --> $DIR/issue-67185-2.rs:29:14
   |
LL | trait Foo
   |       --- required by a bound in this
...
LL |         <u8 as Baz>::Quaks: Bar,
   |                             --- required by this bound in `Foo`
...
LL | fn f(_: impl Foo) {}
   |              ^^^ the trait `Bar` is not implemented for `[u16; 3]`
   |
   = help: the following implementations were found:
             <[[u16; 3]; 3] as Bar>
             <[u16; 4] as Bar>

error: aborting due to 6 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
